--- a/angular.json
+++ b/angular.json
@@ -45,6 +45,23 @@
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true
+            },
+            "e1": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.e1.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true
             }
           }
         },
@@ -56,6 +73,9 @@
           "configurations": {
             "production": {
               "browserTarget": "challenge-ladder:build:production"
+            },
+            "e1": {
+              "browserTarget": "challenge-ladder:build:e1"
             }
           }
         },
