added disable cache to web page

--- a/src/web.config
+++ b/src/web.config
@@ -13,7 +13,7 @@
             </rules>
         </rewrite>
         <staticContent>
-            <clientCache cacheControlCustom="public" cacheControlMode="UseMaxAge" cacheControlMaxAge="365.00:00:00" />
+            <clientCache cacheControlMode="DisableCache" />
             <remove fileExtension=".woff" />
             <remove fileExtension=".woff2" />
             <remove fileExtension=".css" />
